correct background on tablet

--- a/ArticleTemplates/assets/scss/type/_guardianlabs.scss
+++ b/ArticleTemplates/assets/scss/type/_guardianlabs.scss
@@ -8,4 +8,16 @@
             padding: 0;
         }
     }
+
+    &.is_advertising {
+        .article-kicker {
+            background-color: color(global-adv-bg);
+        }
+
+        @include mq($from: col4) {
+            .article-header .article-kicker {
+                background-color: color(global-adv-bg);
+            }
+        }
+    }
 }
